latest updates to the code

--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -58,7 +58,7 @@
         android:background="@drawable/edit_text_bg"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:hint="@string/password"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -73,7 +73,7 @@
         android:background="@drawable/edit_text_bg"
         android:drawableLeft="@drawable/ic_baseline_vpn_key_24"
         android:hint="@string/rePassword"
-        android:inputType="numberPassword"
+        android:inputType="textPassword"
         android:padding="15dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
