--- a/app/src/main/res/layout/cart_item_activity.xml
+++ b/app/src/main/res/layout/cart_item_activity.xml
@@ -35,11 +35,10 @@
             android:id="@+id/txtItemPriceTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/bree_serif"
             android:gravity="center_horizontal"
             android:text="Price"
             android:textSize="18sp"
-            android:textStyle="italic"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtItemPrice"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/txtItemPrice" />
@@ -48,7 +47,7 @@
             android:id="@+id/txtItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="80dp"
+            android:layout_marginTop="3dp"
             android:fontFamily="@font/bree_serif"
             android:gravity="center_horizontal"
             android:paddingLeft="20dp"
@@ -57,13 +56,13 @@
             android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtQuantity" />
+            app:layout_constraintStart_toEndOf="@+id/txtItemPriceTitle"
+            app:layout_constraintTop_toBottomOf="@+id/txtQuant" />
 
         <TextView
             android:id="@+id/txtTotalItemPrice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="104dp"
             android:fontFamily="@font/bree_serif"
             android:gravity="center_horizontal"
             android:text="Total"
@@ -71,49 +70,48 @@
             android:textStyle="italic"
             app:layout_constraintBottom_toBottomOf="@+id/txtTotalPriceTitle"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtTotalPriceTitle"
             app:layout_constraintTop_toTopOf="@+id/txtTotalPriceTitle" />
 
         <TextView
             android:id="@+id/txtTotalPriceTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/bree_serif"
+            android:layout_marginTop="4dp"
             android:gravity="center_horizontal"
             android:text="Total"
             android:textSize="18sp"
-            android:textStyle="italic"
+            android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/txtTotalItemPrice"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txtItemPriceTitle" />
 
         <TextView
-            android:id="@+id/txtQuantity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="36dp"
-            android:padding="10dp"
-            android:text="Quantity ( Cup(s) )"
-            android:textAllCaps="true"
-            android:textColor="@android:color/white"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txtTitleItem" />
-
-        <TextView
             android:id="@+id/txtQuantityTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/bree_serif"
+            android:layout_marginTop="2dp"
             android:gravity="center_horizontal"
             android:text="Quantity"
             android:textSize="18sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="@+id/txtQuantity"
-            app:layout_constraintEnd_toStartOf="@+id/txtQuantity"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@+id/txtQuant"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/txtQuantity" />
+            app:layout_constraintTop_toBottomOf="@+id/txtTitleItem" />
+
+        <TextView
+            android:id="@+id/txtQuant"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:text="Quantity"
+            android:textSize="18sp"
+            android:fontFamily="@font/bree_serif"
+            android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@+id/txtQuantityTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/txtQuantityTitle"
+            app:layout_constraintTop_toTopOf="@+id/txtQuantityTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
