--- a/app/src/main/res/menu/navigation_drawer.xml
+++ b/app/src/main/res/menu/navigation_drawer.xml
@@ -14,6 +14,11 @@
         android:title="@string/title8_navigation"
         app:showAsAction="always"
         android:icon="@drawable/ic_baseline_shopping_cart"
-        
+        />
+    <item
+        android:id="@+id/item4"
+        android:title="Notification"
+        app:showAsAction="always"
+        android:icon="@drawable/ic_notifications_black_24dp"
         />
 </menu>
