--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -31,6 +31,7 @@
         android:drawableLeft="@drawable/ic_baseline_person_24"
         android:hint="@string/name"
         android:padding="15dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitleSignUp"
@@ -45,6 +46,7 @@
         android:drawableLeft="@drawable/ic_baseline_person_pin_24"
         android:hint="@string/email"
         android:padding="15dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtNameRegister"
@@ -60,6 +62,7 @@
         android:hint="@string/password"
         android:inputType="textPassword"
         android:padding="15dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtEmailRegister"
@@ -75,6 +78,7 @@
         android:hint="@string/rePassword"
         android:inputType="textPassword"
         android:padding="15dp"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/edtPasswordRegister"
