--- a/app/src/main/res/layout/notification_item_activity.xml
+++ b/app/src/main/res/layout/notification_item_activity.xml
@@ -23,10 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="2dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="15dp"
             android:layout_marginEnd="2dp"
-            android:layout_marginBottom="2dp"
-            app:layout_constraintBottom_toTopOf="@+id/txtTimeNot"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -35,9 +33,11 @@
             android:id="@+id/txtTimeNot"
             android:layout_width="wrap_content"
             android:layout_height="10dp"
-            android:layout_marginEnd="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginBottom="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txtNotification" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
