--- a/app/src/main/res/layout/first_item_activity.xml
+++ b/app/src/main/res/layout/first_item_activity.xml
@@ -14,7 +14,6 @@
         android:layout_height="180dp"
         android:background="@drawable/front1">
 
-
         <TextView
             android:id="@+id/txttitlehome"
             android:layout_width="wrap_content"
@@ -49,7 +48,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txttitlehome" />
+            app:layout_constraintTop_toBottomOf="@+id/txttitlehome"
+            tools:targetApi="s" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
