--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -40,7 +40,7 @@
         app:layout_constraintTop_toBottomOf="@+id/title_landscaping_des" />
 
     <Button
-        android:id="@+id/btnAutoLandscaping"
+        android:id="@+id/btnLandscapingDesign"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="200dp"
@@ -62,6 +62,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnAutoLandscaping" />
+        app:layout_constraintTop_toBottomOf="@+id/btnLandscapingDesign" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
